feat: Multi-Agent 协作深化 + CLI 全局启动与中文 UI
交付 SharedState/ask_peer、Dynamic Workflow、A2A 混编、ReAct 规划与工具反思、动态重规划等协作能力；并补齐 bettercli 安装启动器、Windows VT 终端修复、BETTER AGENT 开屏与 /lang 中英切换。

Co-authored-by: Cursor <cursoragent@cursor.com>